// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analysisAddForm should have working getBoolField method 1`] = `
Object {
  "defaultValue": null,
  "mapper": Object {
    "fromRaw": [Function],
    "toRaw": [Function],
  },
  "name": "someBool",
  "validator": Object {},
}
`;

exports[`analysisAddForm should have working getStrField method 1`] = `
Object {
  "defaultValue": null,
  "mapper": Object {
    "fromRaw": [Function],
    "toRaw": [Function],
  },
  "name": "someStr",
  "validator": Object {
    "rawValidator": null,
  },
}
`;
